# accretiondisc

./: .gitignore  LICENSE  README.md  pyproject.toml
accretiondisc/: accretiondisc.py  diffusion_example.py  disc.py  steady_accretion_example.py  units.py
examples/: diffusion_example.py  steady_accretion_example.py  steady_accretion_massive_particles.py  test_disc.npy
tests/: test_accretiondisc.py
