[tool.poetry]
name = "accretiondisc"
version = "0.1.0"
description = ""
authors = ["matas <matas.tartenas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numba = "^0.55.1"
matplotlib = "^3.5.1"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
